--- a/frontend/src/assets/styles/NavbarSmart.css
+++ b/frontend/src/assets/styles/NavbarSmart.css
@@ -10,6 +10,7 @@
   padding: 0 25px;
   box-shadow: 0 2px 8px rgba(0,0,0,0.15);
   box-sizing: border-box; /* ¡IMPORTANTE! Incluye padding en el cálculo del width */
+  z-index: 9999;
 }
 
 /* LEFT SIDE */
